# seven-configs

./: .gitignore  README.md  main.py  pyproject.toml
sconfig/: __main__.py  constat.py  database.py  model.py
sconfig/ui/: tui.py
sconfig/ui/css/: __init__.py  main.py  objs.py
sconfig/ui/screens/: __init__.py  base.py  index.py
sconfig/ui/widgets/: empty.py  tree.py
sconfig/utils/: settings.py  watcher.py
